--- a/sleep.html
+++ b/sleep.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Story of a Piggy</title>
+	<title>Sleepy Piggy</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -43,21 +43,12 @@
   </div>
 </nav>
 
-
-
-	<div class="container">
-		<img src="https://scontent-lht6-1.cdninstagram.com/vp/60dc9475b8d2241002034c1fe803c0c7/5D9C8280/t51.2885-15/e35/59482889_387398621856974_6087547818370065404_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com&se=7&ig_cache_key=MjAzOTYzNzM1ODI1MDIyMzM2OQ%3D%3D.2
-">
-		<img src="https://scontent-lga3-1.cdninstagram.com/vp/b680f89548b7f72cefad7dd5d93625ca/5D79169A/t51.2885-15/e35/57325339_135967767511796_6787061185965823904_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com&se=8">
-
-		<img src="https://i.pinimg.com/564x/fb/00/c6/fb00c692eb0a00d6e0fd0d2e6f38b52a.jpg">
-
-		<img src="https://scontent-lga3-1.cdninstagram.com/vp/20a1ebb7c737663b2821bbdf728169a8/5E03F436/t51.2885-15/sh0.08/e35/s640x640/51638160_2278506122194773_2754573621210109641_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com&_nc_cat=109">
-		<img src="https://scontent-bru2-1.cdninstagram.com/vp/ed821deb0151a604a4016efbc6b4a2c5/5D7C1029/t51.2885-15/e35/59380791_677966665980061_3950209168860376685_n.jpg?_nc_ht=scontent-bru2-1.cdninstagram.com&se=8">
-
-		<img src="https://i.pinimg.com/564x/7c/3a/55/7c3a552f4bd817fdf0c09cf45fb576ad.jpg">
-	</div>
-
+<div class="container2">
+    
+    <img src="https://i.pinimg.com/564x/6e/77/58/6e77589126aaff7e1f0f058e0501ed5f.jpg" class="img-fluid" alt="Responsive image">
+    <img src="https://i.pinimg.com/564x/ec/84/c7/ec84c745f8becd7e0693514426226bd5.jpg" class="img-fluid" alt="Responsive image">
+    <img src="https://i.pinimg.com/originals/30/3f/df/303fdfe60b716deab4f91556c60b36a2.jpg" class="img-fluid" alt="Responsive image">
+    </div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
