--- a/food.html
+++ b/food.html
@@ -4,6 +4,7 @@
 	<title>Hungry Piggy</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
 	<h1>Life as a Piggy</h1>
@@ -16,20 +17,21 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="food.html">Food <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" href="romance.html">Romance</a>
+        <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         Activities
+          Gallery
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="sports.html">Sports</a>
+          <a class="dropdown-item" href="food.html">Eating</a>
              <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="sleep.html">Sleep</a>
+             <a class="dropdown-item" href="sleep.html">Sleeping</a>
+             <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="romance.html">Romance</a>
+             <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="sports.html">Sports</a>
         </div>
       </li>
       </ul>
@@ -40,13 +42,14 @@
      </div>
     </nav>
 
-      <div class="container2">
-      <img src="https://i.pinimg.com/564x/ff/f3/25/fff3252767e0af205ec07284b3acc847.jpg" class="img-fluid" alt="Responsive image">
-      <img src="https://i.pinimg.com/564x/67/47/78/674778650731b85f207e0bc37c8a95fc.jpg" class="img-fluid" alt="Responsive image">
-      <img src="https://i.pinimg.com/564x/3e/37/23/3e37233791fab09bcb39c6e6044ec1de.jpg" class="img-fluid" alt="Responsive image">
-      <img src="https://i.pinimg.com/564x/d8/78/10/d87810eca7b3450058adb2feba173856.jpg" class="img-fluid" alt="Responsive image">
-      <img src="https://i.pinimg.com/564x/a5/d7/14/a5d714af8642e8cb96288cd39a3312f6.jpg" class="img-fluid" alt="Responsive image">
-      <img src="https://i.pinimg.com/564x/63/87/ed/6387ed7c567ceaea526a317e3b4d1172.jpg" class="img-fluid" alt="Responsive image">
+      <div class="photo">
+      <img src="https://i.pinimg.com/564x/ff/f3/25/fff3252767e0af205ec07284b3acc847.jpg">
+      <img src="https://i.pinimg.com/564x/9a/cd/46/9acd46c4322f99570f92336ef0804989.jpg">
+      <img src=https://i.pinimg.com/564x/6d/b5/1f/6db51f8ca2a281ce7c187f6d160f45eb.jpg>
+      <img src="https://i.pinimg.com/564x/d8/78/10/d87810eca7b3450058adb2feba173856.jpg">
+      <img src="https://i.pinimg.com/564x/ce/69/87/ce6987d436df304dcd30f80ff0520f6e.jpg">
+      <img src="https://i.pinimg.com/564x/63/87/ed/6387ed7c567ceaea526a317e3b4d1172.jpg">
+       <img src="https://i.pinimg.com/564x/67/47/78/674778650731b85f207e0bc37c8a95fc.jpg">
       </div>
     
 
