--- a/romance.html
+++ b/romance.html
@@ -4,32 +4,34 @@
   	<title>Piggy in love</title>
   	<link rel="stylesheet" type="text/css" href="style.css">
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
 	   <h1>Life as a Piggy</h1>
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Zhu Xiao Pi</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <a class="navbar-brand" href="index.html">Zhu Xiao Pi</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="food.html">Food <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" href="romance.html">Romance</a>
+        <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Activities
+          Gallery
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="sports.html">Sports</a>
+          <a class="dropdown-item" href="food.html">Eating</a>
              <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="sleep.html">Sleep</a>   
+             <a class="dropdown-item" href="sleep.html">Sleeping</a>
+             <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="romance.html">Romance</a>
+             <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="sports.html">Sports</a>
         </div>
       </li>
       
@@ -41,7 +43,7 @@
   </div>
 </nav>
 
-    <div class="container2">
+    <div class="photo">
     
     <img src="https://i.pinimg.com/564x/64/b3/9b/64b39b86fef298356bea9b6b122d3a5b.jpg" class="img-fluid" alt="Responsive image">
     <img src="https://i.pinimg.com/564x/f9/14/46/f91446e205d7c3e8dce75e78a01fdfbd.jpg" class="img-fluid" alt="Responsive image">
